--- a/IOSModelBay/Views&Controllers/Profile/Ablum/Views/MB_AlbumTableViewCell.xib
+++ b/IOSModelBay/Views&Controllers/Profile/Ablum/Views/MB_AlbumTableViewCell.xib
@@ -23,7 +23,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="MB_AlbumTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="500"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="390"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
@@ -64,38 +64,32 @@
                             <constraint firstAttribute="height" constant="1" id="u48-Xd-BOQ"/>
                         </constraints>
                     </view>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="when i thout" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4kF-yB-XJ7">
-                        <rect key="frame" x="8" y="251" width="73" height="15"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="when i thout" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4kF-yB-XJ7">
+                        <rect key="frame" x="8" y="251" width="312" height="15"/>
                         <fontDescription key="fontDescription" name="CenturyGothic" family="Century Gothic" pointSize="12"/>
                         <color key="textColor" red="0.46274509803921571" green="0.46274509803921571" blue="0.46274509803921571" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="aaaa" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MEq-1D-pOI">
-                        <rect key="frame" x="8" y="278" width="28" height="13"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="aaaa" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MEq-1D-pOI">
+                        <rect key="frame" x="8" y="278" width="312" height="12.5"/>
                         <fontDescription key="fontDescription" name="CenturyGothic-Italic" family="Century Gothic" pointSize="10"/>
                         <color key="textColor" red="0.46274509803921571" green="0.46274509803921571" blue="0.46274509803921571" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="bbbbb" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J6Y-wI-2f4">
-                        <rect key="frame" x="8" y="296" width="35" height="13"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="bottom" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="bbbbb" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J6Y-wI-2f4">
+                        <rect key="frame" x="8" y="295" width="312" height="12.5"/>
                         <fontDescription key="fontDescription" name="CenturyGothic-Italic" family="Century Gothic" pointSize="10"/>
                         <color key="textColor" red="0.46274509803921571" green="0.46274509803921571" blue="0.46274509803921571" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="ccccc" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7pt-eP-YpR">
-                        <rect key="frame" x="8" y="314" width="33" height="110"/>
-                        <fontDescription key="fontDescription" name="CenturyGothic-Italic" family="Century Gothic" pointSize="10"/>
-                        <color key="textColor" red="0.46274509803921571" green="0.46274509803921571" blue="0.46274509803921571" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="ddddd" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sLK-hi-R3u">
-                        <rect key="frame" x="8" y="429" width="35" height="13"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ccccc" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7pt-eP-YpR">
+                        <rect key="frame" x="8" y="313" width="312" height="12.5"/>
                         <fontDescription key="fontDescription" name="CenturyGothic-Italic" family="Century Gothic" pointSize="10"/>
                         <color key="textColor" red="0.46274509803921571" green="0.46274509803921571" blue="0.46274509803921571" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Uf-sQ-NoX">
-                        <rect key="frame" x="12" y="457" width="21" height="21"/>
+                        <rect key="frame" x="12" y="358" width="21" height="21"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="21" id="6mT-Io-bmV"/>
                             <constraint firstAttribute="height" constant="21" id="7Ib-xo-gLW"/>
@@ -105,29 +99,35 @@
                         </state>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tkm-99-f6i">
-                        <rect key="frame" x="39" y="457" width="42" height="21"/>
+                        <rect key="frame" x="39" y="358" width="42" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SBs-EE-IrL">
-                        <rect key="frame" x="106" y="457" width="21" height="22"/>
+                        <rect key="frame" x="106" y="358" width="21" height="22"/>
                         <state key="normal" image="ic_comment">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eYY-ao-7Mg">
-                        <rect key="frame" x="133" y="457" width="42" height="21"/>
+                        <rect key="frame" x="133" y="358" width="42" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rd1-DZ-8pK">
-                        <rect key="frame" x="275" y="457" width="21" height="22"/>
+                        <rect key="frame" x="275" y="358" width="21" height="22"/>
                         <state key="normal" image="ic_share">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                     </button>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ddddd" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sLK-hi-R3u">
+                        <rect key="frame" x="8" y="330" width="312" height="12.5"/>
+                        <fontDescription key="fontDescription" name="CenturyGothic-Italic" family="Century Gothic" pointSize="10"/>
+                        <color key="textColor" red="0.46274509803921571" green="0.46274509803921571" blue="0.46274509803921571" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
                     <constraint firstItem="4kF-yB-XJ7" firstAttribute="top" secondItem="ySH-1u-JcM" secondAttribute="bottom" constant="9" id="0nN-VQ-uo7"/>
@@ -136,13 +136,17 @@
                     <constraint firstItem="sgN-Zb-d1i" firstAttribute="centerY" secondItem="8k6-1P-Qfj" secondAttribute="centerY" id="330-TE-grj"/>
                     <constraint firstItem="sgN-Zb-d1i" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="3f8-9v-swX"/>
                     <constraint firstAttribute="trailing" secondItem="A4C-4E-p0z" secondAttribute="trailing" id="4YK-mk-ea5"/>
+                    <constraint firstAttribute="trailing" secondItem="4kF-yB-XJ7" secondAttribute="trailing" id="62T-8B-W0m"/>
                     <constraint firstItem="7Uf-sQ-NoX" firstAttribute="top" secondItem="sLK-hi-R3u" secondAttribute="bottom" constant="15" id="8Hb-Th-NdN"/>
+                    <constraint firstAttribute="bottom" secondItem="7Uf-sQ-NoX" secondAttribute="bottom" constant="10.5" id="8zh-Dn-3jp"/>
                     <constraint firstAttribute="trailing" secondItem="Rd1-DZ-8pK" secondAttribute="trailing" constant="24" id="C5V-VE-H03"/>
                     <constraint firstItem="eYY-ao-7Mg" firstAttribute="centerY" secondItem="SBs-EE-IrL" secondAttribute="centerY" id="DQh-go-N8N"/>
                     <constraint firstItem="A4C-4E-p0z" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Dsj-Ic-8pf"/>
                     <constraint firstAttribute="trailing" secondItem="Rd1-DZ-8pK" secondAttribute="trailing" constant="24" id="FPy-eY-VLf"/>
                     <constraint firstItem="8k6-1P-Qfj" firstAttribute="leading" secondItem="Tke-xC-KO3" secondAttribute="trailing" constant="3" id="GjW-x1-jHj"/>
                     <constraint firstItem="4kF-yB-XJ7" firstAttribute="leading" secondItem="sLK-hi-R3u" secondAttribute="leading" id="I2x-MR-G23"/>
+                    <constraint firstAttribute="trailing" secondItem="MEq-1D-pOI" secondAttribute="trailing" id="K4x-hV-gK5"/>
+                    <constraint firstAttribute="trailing" secondItem="J6Y-wI-2f4" secondAttribute="trailing" id="LEU-hf-pfG"/>
                     <constraint firstItem="J6Y-wI-2f4" firstAttribute="top" secondItem="MEq-1D-pOI" secondAttribute="bottom" constant="5" id="P3A-h7-fyd"/>
                     <constraint firstItem="4kF-yB-XJ7" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="Q4V-FH-pDJ"/>
                     <constraint firstItem="sgN-Zb-d1i" firstAttribute="top" secondItem="A4C-4E-p0z" secondAttribute="bottom" id="QlZ-gv-GMU"/>
@@ -154,6 +158,8 @@
                     <constraint firstItem="4kF-yB-XJ7" firstAttribute="leading" secondItem="7pt-eP-YpR" secondAttribute="leading" id="ZTb-c7-HNF"/>
                     <constraint firstItem="4kF-yB-XJ7" firstAttribute="leading" secondItem="J6Y-wI-2f4" secondAttribute="leading" id="Zo0-s5-ODL"/>
                     <constraint firstAttribute="trailing" secondItem="8k6-1P-Qfj" secondAttribute="trailing" constant="11" id="aC3-QM-5Uy"/>
+                    <constraint firstAttribute="trailing" secondItem="sLK-hi-R3u" secondAttribute="trailing" id="aTE-6N-nTH"/>
+                    <constraint firstAttribute="trailing" secondItem="7pt-eP-YpR" secondAttribute="trailing" id="b5A-dl-0Nx"/>
                     <constraint firstItem="eYY-ao-7Mg" firstAttribute="centerY" secondItem="tkm-99-f6i" secondAttribute="centerY" id="dCM-iK-1wB"/>
                     <constraint firstItem="sgN-Zb-d1i" firstAttribute="centerY" secondItem="Tke-xC-KO3" secondAttribute="centerY" id="dXh-UA-S1j"/>
                     <constraint firstAttribute="trailing" secondItem="ySH-1u-JcM" secondAttribute="trailing" id="gb9-UC-ezw"/>
@@ -173,10 +179,20 @@
                 <variation key="default">
                     <mask key="constraints">
                         <exclude reference="nS4-Gl-NVt"/>
+                        <exclude reference="tKT-A4-L9z"/>
                         <exclude reference="C5V-VE-H03"/>
                     </mask>
                 </variation>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="con1" destination="2Xn-Wr-q9m" id="dIE-ic-W1x"/>
+                <outlet property="con2" destination="P3A-h7-fyd" id="MKN-UH-Aw7"/>
+                <outlet property="con3" destination="oeu-2Z-yaZ" id="cqA-c5-Qgs"/>
+                <outlet property="con4" destination="ROW-F4-YIv" id="b6O-tr-4Q2"/>
+                <outlet property="label1" destination="4kF-yB-XJ7" id="yBw-LY-fc6"/>
+                <outlet property="label2" destination="J6Y-wI-2f4" id="5IV-ZY-UgE"/>
+                <outlet property="label3" destination="7pt-eP-YpR" id="Owg-ls-Hpr"/>
+            </connections>
         </tableViewCell>
     </objects>
     <resources>
